# MatAnyone2-Gradio-Windows

./: .gitignore  README.ja.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs-pages.yml  release-package.yml  repo-checks.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/guide/: architecture.md  ci-cd.md  getting-started.md  performance.md  troubleshooting.md  usage.md
docs/ja/: index.md
docs/ja/guide/: architecture.md  ci-cd.md  getting-started.md  performance.md  troubleshooting.md  usage.md
hugging_face/: __init__.py  app.py  matanyone2_wrapper.py
hugging_face/tools/: interact_tools.py
matanyone/inference/: inference_core.py  memory_manager.py
matanyone/model/: matanyone.py  modules.py
matanyone/utils/: get_default_model.py
matanyone2/: __init__.py  __main__.py  api.py  cli.py  demo_core.py  gradio.py  runtime.py
matanyone2/inference/: inference_core.py
matanyone2/model/: matanyone2.py
matanyone2/utils/: device.py
media/: matanyone-architecture-ja.drawio  matanyone-architecture.drawio
scripts/: run_pipeline_check.py
